--- a/flink-examples/pom.xml
+++ b/flink-examples/pom.xml
@@ -36,6 +36,7 @@ under the License.
 		<module>flink-examples-batch</module>
 		<module>flink-examples-streaming</module>
 		<module>flink-examples-table</module>
+		<module>flink-data-source</module>
 	</modules>
 
 	<dependencies>
@@ -72,6 +73,12 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-test-utils-junit</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
 		</dependency>
 
 	</dependencies>
